--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,18 +1,10 @@
 
-plugins {
-    id 'org.springframework.boot'
-}
-
 group = 'uk.gov.fco.casemanagement.common'
-
-jar {
-    enabled = true
-}
 
 dependencies {
     compile 'com.amazonaws:amazon-sqs-java-temporary-queues-client:1.0.2'
     compile 'com.google.guava:guava:28.1-jre'
-    compile 'org.springframework.boot:spring-boot-configuration-processor'
-    compile 'org.springframework.boot:spring-boot-starter'
+    compile 'org.springframework.boot:spring-boot-configuration-processor:2.1.8.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter:2.1.8.RELEASE'
     compile 'org.springframework.cloud:spring-cloud-aws-messaging:2.1.3.RELEASE'
 }
