--- a/worker/src/main/resources/application.yml
+++ b/worker/src/main/resources/application.yml
@@ -14,7 +14,7 @@ logging:
   pattern:
     console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
   level:
-    root: ${ROOT_LOGGING_LEVEL:DEBUG}
+    root: ${ROOT_LOGGING_LEVEL:INFO}
     com.amazonaws: INFO
     org.apache: INFO
     org.springframework: INFO
