--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -16,8 +16,8 @@ logging:
   pattern:
     console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
   level:
-    root: ${ROOT_LOGGING_LEVEL:INFO}
-    com.amazonaws: INFO
+    root: ${ROOT_LOGGING_LEVEL:DEBUG}
+    com.amazonaws: DEBUG
     org.apache.http: INFO
     org.springframework: INFO
 
