--- a/worker/src/main/resources/application.yml
+++ b/worker/src/main/resources/application.yml
@@ -14,14 +14,14 @@ logging:
   pattern:
     console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
   level:
-    root: ${ROOT_LOGGING_LEVEL:INFO}
+    root: ${ROOT_LOGGING_LEVEL:debug}
     com.amazonaws: INFO
     org.apache: INFO
     org.springframework: INFO
 
 message-queue:
-  endpoint: ${MESSAGE_QUEUE_ENDPOINT:http://localhost:9324}
-  queue-url: ${MESSAGE_QUEUE_URL:http://localhost:9324/queue/default}
+  endpoint: ${MESSAGE_QUEUE_ENDPOINT:https://sqs.eu-west-1.amazonaws.com}
+  queue-url: ${MESSAGE_QUEUE_URL:https://sqs.eu-west-1.amazonaws.com/545108028694/fco-forms-casemanagement-queue.fifo}
   internal-queue-prefix: ${INTERNAL_QUEUE_PREFIX:casemanagment-requester}
   request-timeout: 30000
 
