A few tests and fixes to casebook application conversion.

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -16,4 +16,7 @@ dependencies {
     compile 'org.springdoc:springdoc-openapi-ui:1.1.39'
     compile 'org.springframework.boot:spring-boot-starter-jersey'
     compile 'org.springframework.boot:spring-boot-starter-web'
+
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile 'org.springframework.security:spring-security-test'
 }
