--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -12,6 +12,10 @@ server:
   servlet:
     context-path: /v1
 
+springdoc:
+  api-docs:
+    path: /api-docs
+
 logging:
   pattern:
     console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
