--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,4 +7,6 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-configuration-processor:2.1.8.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter:2.1.8.RELEASE'
     compile 'org.springframework.cloud:spring-cloud-aws-messaging:2.1.3.RELEASE'
+
+    testCompile 'org.mockito:mockito-core:2.8.47'
 }
