--- a/worker/build.gradle
+++ b/worker/build.gradle
@@ -14,4 +14,7 @@ dependencies {
     compile project(':common')
 
     compile 'org.springframework.boot:spring-boot-starter-web'
+
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile 'org.springframework.security:spring-security-test'
 }
