--- a/worker/src/main/resources/application.yml
+++ b/worker/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 
+spring:
+  jackson:
+    default-property-inclusion: non_absent
+    serialization:
+      write_dates_as_timestamps: false
+
 logging:
   pattern:
     console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
