--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,27 @@ jobs:
 
       - run: ./gradlew build
 
+      - store_test_results:
+          path: api/build/test-results
+
+      - store_test_results:
+          path: worker/build/test-results
+
+      - store_test_results:
+          path: common/build/test-results
+
+      - store_artifacts:
+          path: api/build/reports
+          destination: reports-api
+
+      - store_artifacts:
+          path: worker/build/reports
+          destination: reports-worker
+
+      - store_artifacts:
+          path: common/build/reports
+          destination: reports-common
+
       - persist_to_workspace:
           root: .
           paths:
