Update case field mappings.

--- a/worker/src/main/resources/mappings/application.properties
+++ b/worker/src/main/resources/mappings/application.properties
@@ -1,4 +1,4 @@
-applicant.cityOfBirth=cityofbirth
+applicant.cityOfBirth=cityofbirth,placeofbirth
 applicant.countryOfBirth=countryofbirth
 applicant.dateOfBirth=dateofbirth
 applicant.email=emailaddress
@@ -8,7 +8,7 @@ applicant.forenames=firstname,middlename,forenames
 applicant.language=language
 applicant.mobileTelephone=mobiletelephone
 applicant.nationality=nationality
-applicant.primaryTelephone=primarytelephone
+applicant.primaryTelephone=primarytelephone,phonenumber
 applicant.reference=reference
 applicant.secondNationality=secondnationality
 applicant.surname=lastname,surname
@@ -21,11 +21,11 @@ applicant.address.houseNumber=housenumber
 applicant.address.postcode=postcode
 applicant.address.premises=premises
 applicant.address.region=region
-applicant.address.street=street
-applicant.address.town=town
+applicant.address.street=street,addressLine1
+applicant.address.town=town,townorcity
 
 application.caseType=casetype
-application.customerInsightConsent=customerinsightconsent
+application.customerInsightConsent=customerinsightconsent,contactforfeedback
 application.marriageCategory=marriagecategory
 application.post=post
 application.reasonForBeingOverseas=reasonforbeingoverseas
