Add partners passport number to Thailand mappings.

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -6,6 +6,7 @@ thailandAffirmationMainOccupation=occupation
 thailandAffirmationPlaceOfBirth=placeOfBirth
 thailandAffirmationPartnersName=partnerName
 thailandAffirmationPartnersNationality=partnersNationality
+thailandAffirmationPartnersPassportNo=partnersPassportNumber
 thailandAffirmationFathersName=fathersName
 thailandAffirmationMothersName=mothersName
 thailandAffirmationMothersMaidenName=mothersMaidenName
