Referee address mapping.

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -12,12 +12,12 @@ thailandAffirmationMothersName=mothersName
 thailandAffirmationMothersMaidenName=mothersMaidenName
 notarialConsentMethodOfContact=contactPreference
 thailandAffirmationReferee1Name=referee1FullName
-thailandAffirmationReferee1Address=referee1Address1,referee1Address2
+thailandAffirmationReferee1Address=referee1AddressLine1,referee1AddressLine2
 thailandAffirmationReferee1Town=referee1TownOrCity
 thailandAffirmationReferee1Postcode=referee1Postcode
 thailandAffirmationReferee1Country=referee1Country
 thailandAffirmationReferee2Name=referee2FullName
-thailandAffirmationReferee2Address=referee2Address1,referee2Address2
+thailandAffirmationReferee2Address=referee2AddressLine1,referee2AddressLine2
 thailandAffirmationReferee2Town=referee2TownOrCity
 thailandAffirmationReferee2Postcode=referee2Postcode
 thailandAffirmationReferee2Country=referee2Country
