--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ subprojects {
         compile 'com.sun.xml.bind:jaxb-impl:2.3.2'
         compile 'javax.activation:activation:1.1.1'
         compile 'org.apache.commons:commons-lang3:3.8.1'
+        compile 'org.springdoc:springdoc-openapi-ui:1.1.39'
 
         testCompile 'org.mockito:mockito-core:2.23.4'
     }
