Add support for SpEL in field mappings to accomodate default values and data conversion.

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -10,7 +10,6 @@ thailandAffirmationPartnersPassportNo=partnersPassportNumber
 thailandAffirmationFathersName=fathersName
 thailandAffirmationMothersName=mothersName
 thailandAffirmationMothersMaidenName=mothersMaidenName
-notarialConsentMethodOfContact=contactPreference
 thailandAffirmationReferee1Name=referee1FullName
 thailandAffirmationReferee1Address=referee1AddressLine1,referee1AddressLine2
 thailandAffirmationReferee1Town=referee1TownOrCity
@@ -23,4 +22,5 @@ thailandAffirmationReferee2Postcode=referee2Postcode
 thailandAffirmationReferee2Country=referee2Country
 thailandAffirmationRegistrationDate=marriageDate
 thailandAffirmationRegistrationProvince=marriageProvince
-notarialDeclaration=declaration
+notarialDeclaration=#{get('declaration') == 'Yes' ? true : false}
+notarialConsentMethodOfContact=#{get('contactPreference')?:'Not set'}
