Remove properties once mapped to a field.

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -22,5 +22,5 @@ thailandAffirmationReferee2Postcode=referee2Postcode
 thailandAffirmationReferee2Country=referee2Country
 thailandAffirmationRegistrationDate=marriageDate
 thailandAffirmationRegistrationProvince=marriageProvince
-notarialDeclaration=#{get('declaration') == 'Yes' ? true : false}
-notarialConsentMethodOfContact=#{get('contactPreference')?:'Not set'}
+notarialDeclaration=#{remove('declaration') == 'Yes' ? true : false}
+notarialConsentMethodOfContact=#{remove('contactPreference')?:'Not set'}
