Default property->field mapping using keys.

--- a/worker/src/main/resources/mappings/application.properties
+++ b/worker/src/main/resources/mappings/application.properties
@@ -21,7 +21,7 @@ applicant.address.houseNumber=housenumber
 applicant.address.postcode=postcode
 applicant.address.premises=premises
 applicant.address.region=region
-applicant.address.street=street,addressLine1
+applicant.address.street=street,addressLine1,addressLine2
 applicant.address.town=town,townorcity
 
 application.caseType=casetype
