--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,8 +74,8 @@ jobs:
       - setup_remote_docker
 
       - run:
-          name: Checkout CI Support
-          command: git clone git@github.com:CautionYourBlast/ci-support.git
+          name: Checkout Docker publish script
+          command: curl https://gist.githubusercontent.com/superafroman/ca7422b3c925dfeba5854edcc1713d89/raw/77febaa0954dfa8ebc6598b1366b7f1f8e38d610/docker-publish.sh -O && chmod +x docker-publish.sh
 
       - run:
           name: Install awscli
@@ -83,7 +83,7 @@ jobs:
 
       - run:
           name: Publish docker image
-          command: cd api && ../ci-support/docker/publish.sh fco casemanagement-api
+          command: cd api && ../docker-publish.sh eu-west-2 523508197323.dkr.ecr.eu-west-2.amazonaws.com fco casemanagement-api
 
       - persist_to_workspace:
           root: .
@@ -108,8 +108,8 @@ jobs:
       - setup_remote_docker
 
       - run:
-          name: Checkout CI Support
-          command: git clone git@github.com:CautionYourBlast/ci-support.git
+          name: Checkout Docker publish script
+          command: curl https://gist.githubusercontent.com/superafroman/ca7422b3c925dfeba5854edcc1713d89/raw/77febaa0954dfa8ebc6598b1366b7f1f8e38d610/docker-publish.sh -O && chmod +x docker-publish.sh
 
       - run:
           name: Install awscli
@@ -117,7 +117,7 @@ jobs:
 
       - run:
           name: Publish docker image
-          command: cd worker && ../ci-support/docker/publish.sh fco casemanagement-worker
+          command: cd worker && ../docker-publish.sh eu-west-2 523508197323.dkr.ecr.eu-west-2.amazonaws.com fco casemanagement-worker
 
       - persist_to_workspace:
           root: .
