Update fee services to map based on incoming charges on form.

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -24,3 +24,15 @@ thailandAffirmationRegistrationDate=marriageDate
 thailandAffirmationRegistrationProvince=marriageProvince
 notarialDeclaration=#{remove('declaration') == 'Yes' ? true : false}
 notarialConsentMethodOfContact=#{remove('contactPreference')?:'Not set'}
+franceMarriageFullNameAtBirth=
+franceMarriageTownOfBirth=
+franceMarriageCountryOfBirth=
+franceMarriageCountryOfBirthFrench=
+franceMarriageMaritalStatus=
+franceMarriageIssueDate=
+francePacsFullNameAtBirth=
+francePacsTownOfBirth=
+francePacsCountryOfBirth=
+francePacsCountryOfBirthFrench=
+francePacsMaritalStatus=
+francePacsIssueDate=
