France field mappings.

--- a/worker/src/main/resources/mappings/application.properties
+++ b/worker/src/main/resources/mappings/application.properties
@@ -1,14 +1,16 @@
 applicant.cityOfBirth=cityofbirth,placeofbirth
 applicant.countryOfBirth=countryofbirth
 applicant.dateOfBirth=dateofbirth
-applicant.email=emailaddress
+applicant.email=emailaddress,email
 applicant.ethnicity=ethnicity
 applicant.eveningTelephone=eveningtelephone
 applicant.forenames=firstname,middlename,forenames
 applicant.language=language
 applicant.mobileTelephone=mobiletelephone
 applicant.nationality=nationality
-applicant.primaryTelephone=primarytelephone,phonenumber
+applicant.passportIssueDate=passportissuedate
+applicant.passportNumber=passportnumber
+applicant.primaryTelephone=primarytelephone,phonenumber,telephone
 applicant.reference=reference
 applicant.secondNationality=secondnationality
 applicant.surname=lastname,surname
@@ -26,6 +28,6 @@ applicant.address.town=town,townorcity
 
 application.caseType=casetype
 application.customerInsightConsent=customerinsightconsent,contactforfeedback
-application.marriageCategory=marriagecategory
+application.marriageCategory=marriagecategory,ceremony
 application.post=post
 application.reasonForBeingOverseas=reasonforbeingoverseas
