--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -22,17 +22,14 @@ thailandAffirmationReferee2Postcode=referee2Postcode
 thailandAffirmationReferee2Country=referee2Country
 thailandAffirmationRegistrationDate=marriageDate
 thailandAffirmationRegistrationProvince=marriageProvince
-notarialDeclaration=#{remove('declaration') == 'Yes' ? true : false}
+notarialDeclaration=declaration
 notarialConsentMethodOfContact=#{remove('contactPreference')?:'Not set'}
-franceMarriageFullNameAtBirth=
-franceMarriageTownOfBirth=
-franceMarriageCountryOfBirth=
-franceMarriageCountryOfBirthFrench=
-franceMarriageMaritalStatus=
-franceMarriageIssueDate=
-francePacsFullNameAtBirth=
-francePacsTownOfBirth=
-francePacsCountryOfBirth=
+franceMarriageFullNameAtBirth=firstName, middleName, surname
+franceMarriageTownOfBirth=placeOfBirth
+franceMarriageCountryOfBirth=countryOfBirth
+franceMarriageMaritalStatus=#{remove('maritalStatusNow')?:'Single'}
+francePacsFullNameAtBirth=firstName, middleName, surname
+francePacsTownOfBirth=placeOfBirth
+francePacsCountryOfBirth=countryOfBirth
 francePacsCountryOfBirthFrench=
-francePacsMaritalStatus=
-francePacsIssueDate=
+francePacsMaritalStatus=#{remove('maritalStatusNow')?:'Single'}
