Add data type to fields.

--- a/worker/src/main/resources/mappings/application.properties
+++ b/worker/src/main/resources/mappings/application.properties
@@ -5,6 +5,7 @@ applicant.email=emailaddress,email
 applicant.ethnicity=ethnicity
 applicant.eveningTelephone=eveningtelephone
 applicant.forenames=firstname,middlename,forenames
+applicant.gender=sex
 applicant.language=language
 applicant.mobileTelephone=mobiletelephone
 applicant.nationality=nationality
