Start of Spain mappings.

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -34,3 +34,72 @@ francePacsTownOfBirth=placeOfBirth
 francePacsCountryOfBirth=countryOfBirth
 francePacsMaritalStatus=#{remove('maritalStatusNow')?:'Single'}
 francePacsIssueDate=date
+
+spainCniEligibilityLive=whereDoYouLive
+spainCniEligibilityPartnerSpanishNational=partnerSpanish
+spainCniEligibilityPartnerSpanishResident=partnerResidentInSpain
+spainCniEligibilityNoImpediment=spanishCNI
+spainCniPartnersDetailsFirstName=#{(get('partnersFullName')?:' ').split(' ')[0]}
+spainCniPartnersDetailsLastName=#{(get('partnersFullName')?:' ').split(' ')[1]}
+spainCniPartnersDetailsNationality=partnersNationality
+spainCniPartnersDetailsAddress=partnersAddressLine1
+spainCniPartnersDetailsAddressLine2=partnersAddressLine2
+spainCniPartnersDetailsAddressTown=partnersTown
+spainCniPartnersDetailsAddressPostcode=partnersPostcode
+spainCniPartnersDetailsMaritalStatus=#{remove('partnersCurrentMaritalStatus')?:'Single'}
+spainCniPartnersDetailsSex=partnersSex
+spainCniPartnersDetailsSpanishAuthority=nameOfSpanishAuthority
+spainCniPartnersDetailsCivilPartnershipBefore=partnerHasBeenMarriedBefore
+spainCniPartnersDetailsDateOfAppointment=dateOfAppointment
+spainCniPartnersDetailsPlaceOfCeremony=placeOfMarriage
+spainCniPartnersDetailsDateOfCeremony=dateOfMarriage
+spainCniYourDetailsMaritalStatus=#{remove('maritalStatusNow')?:'Single'}
+spainCniYourDetailsDeliveryAddressAddress=recipientAddressLine1
+spainCniYourDetailsDeliveryAddressAddressLine2=recipientAddressLine2
+spainCniYourDetailsDeliveryAddressTown=recipientTownOrCity
+spainCniYourDetailsDeliveryAddressPostcode=recipientPostcode
+
+spainMscEligibilityLive=whereDoYouLive
+spainMscEligibilityPartnerSpanishNational=partnerSpanish
+spainMscEligibilityPartnerSpanishResident=partnerResidentInSpain
+spainMscEligibilityNoImpediment=spanishCNI
+spainMscEligibilityCertificate=needMSC
+spainMscStatusMaritalStatus=#{remove('maritalStatusNow')?:'Single'}
+spainMscPartnersDetailsCivilPartnership=partnerHasBeenMarriedBefore
+spainMscPartnersDetailsMaritalStatus=#{remove('partnersCurrentMaritalStatus')?:'Single'}
+spainMscPartnersDetailsSex=partnersSex
+spainMscPartnersDetailsNationality=partnersNationality
+spainMscPartnersDetailsSpanishAuthority=nameOfSpanishAuthority
+spainMscPartnersDetailsAppointmentDate=dateOfAppointment
+spainMscPartnersDetailsPlaceOfCeremony=placeOfMarriage
+spainMscPartnersDetailsDateOfCeremony=dateOfMarriage
+spainMscYourDetailsPlaceOfBirth=placeOfBirth
+spainMscYourDetailsFathersFirstName=
+spainMscYourDetailsFathersLastName=
+spainMscYourDetailsMothersFirstName=
+spainMscYourDetailsMothersLastName=
+spainMscYourDetailsDeliveryAddressAddress=recipientAddressLine1
+spainMscYourDetailsDeliveryAddressAddressLine2=recipientAddressLine2
+spainMscYourDetailsDeliveryAddressTown=recipientTownOrCity
+spainMscYourDetailsDeliveryAddressPostcode=recipientPostcode
+
+#spainPdhEligibilityUkPassport=
+#spainPdhEligibilityCertificate=
+#spainPdhEligibilityCertificateRegion=
+#spainPdhStatusMaritalStatus=
+#spainPdhPartnersDetailsCivilPartnership=
+#spainPdhPartnersDetailsMaritalStatus=
+#spainPdhYourDetailsPassportIssuingAuthority=
+#spainPdhYourDetailsPlaceOfBirth=
+#spainPdhYourDetailsFathersFirstName=
+#spainPdhYourDetailsFathersLastName=
+#spainPdhYourDetailsMothersFirstName=
+#spainPdhYourDetailsMothersLastName=
+#spainPdhYourDetailsDeliveryAddressAddress=
+#spainPdhYourDetailsDeliveryAddressAddressLine2=
+#spainPdhYourDetailsDeliveryAddressTown=
+#spainPdhYourDetailsDeliveryAddressPostcode=
+#spainPdhYourDetailsDateOfAppointment=
+#spainPdhYourDetailsDateOfCeremony=
+#spainPdhYourContactDetailsSpanishAuthority=
+#spainPdhYourContactDetailsDateOfAppointment=
