Support multiple case management properties referencing a form question.

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -23,17 +23,17 @@ thailandAffirmationReferee2Country=referee2Country
 thailandAffirmationRegistrationDate=marriageDate
 thailandAffirmationRegistrationProvince=marriageProvince
 notarialDeclaration=declaration
-notarialConsentMethodOfContact=#{remove('contactPreference')?:'Not set'}
+notarialConsentMethodOfContact=#{get('contactPreference')?:'Not set'}
 franceMarriageFullNameAtBirth=firstName,middleName,surname
 franceMarriageTownOfBirth=placeOfBirth
 franceMarriageCountryOfBirth=countryOfBirth
-franceMarriageMaritalStatus=#{remove('maritalStatusNow')?:'Single'}
-franceMarriageIssueDate=date
+franceMarriageMaritalStatus=#{get('maritalStatusNow')?:'Single'}
+franceMarriageIssueDate=issueDate
 francePacsFullNameAtBirth=firstName,middleName,surname
 francePacsTownOfBirth=placeOfBirth
 francePacsCountryOfBirth=countryOfBirth
-francePacsMaritalStatus=#{remove('maritalStatusNow')?:'Single'}
-francePacsIssueDate=date
+francePacsMaritalStatus=#{get('maritalStatusNow')?:'Single'}
+francePacsIssueDate=issueDate
 
 spainCniEligibilityLive=whereDoYouLive
 spainCniEligibilityPartnerSpanishNational=partnerSpanish
@@ -46,14 +46,14 @@ spainCniPartnersDetailsAddress=partnersAddressLine1
 spainCniPartnersDetailsAddressLine2=partnersAddressLine2
 spainCniPartnersDetailsAddressTown=partnersTown
 spainCniPartnersDetailsAddressPostcode=partnersPostcode
-spainCniPartnersDetailsMaritalStatus=#{remove('partnersCurrentMaritalStatus')?:'Single'}
+spainCniPartnersDetailsMaritalStatus=#{get('partnersCurrentMaritalStatus')?:'Single'}
 spainCniPartnersDetailsSex=partnersSex
 spainCniPartnersDetailsSpanishAuthority=nameOfSpanishAuthority
 spainCniPartnersDetailsCivilPartnershipBefore=partnerHasBeenMarriedBefore
 spainCniPartnersDetailsDateOfAppointment=dateOfAppointment
 spainCniPartnersDetailsPlaceOfCeremony=placeOfMarriage
 spainCniPartnersDetailsDateOfCeremony=dateOfMarriage
-spainCniYourDetailsMaritalStatus=#{remove('maritalStatusNow')?:'Single'}
+spainCniYourDetailsMaritalStatus=#{get('maritalStatusNow')?:'Single'}
 spainCniYourDetailsDeliveryAddressAddress=recipientAddressLine1
 spainCniYourDetailsDeliveryAddressAddressLine2=recipientAddressLine2
 spainCniYourDetailsDeliveryAddressTown=recipientTownOrCity
@@ -64,9 +64,9 @@ spainMscEligibilityPartnerSpanishNational=partnerSpanish
 spainMscEligibilityPartnerSpanishResident=partnerResidentInSpain
 spainMscEligibilityNoImpediment=spanishCNI
 spainMscEligibilityCertificate=needMSC
-spainMscStatusMaritalStatus=#{remove('maritalStatusNow')?:'Single'}
+spainMscStatusMaritalStatus=#{get('maritalStatusNow')?:'Single'}
 spainMscPartnersDetailsCivilPartnership=partnerHasBeenMarriedBefore
-spainMscPartnersDetailsMaritalStatus=#{remove('partnersCurrentMaritalStatus')?:'Single'}
+spainMscPartnersDetailsMaritalStatus=#{get('partnersCurrentMaritalStatus')?:'Single'}
 spainMscPartnersDetailsSex=partnersSex
 spainMscPartnersDetailsNationality=partnersNationality
 spainMscPartnersDetailsSpanishAuthority=nameOfSpanishAuthority
