Map marital status to not set.

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -1,7 +1,7 @@
 thailandAffirmationWhatYoullNeedUkPassport=ukPassport
 thailandAffirmationWhatYoullNeedOppositeSex=partnerOfOppositeSex
 thailandAffirmationStatusMarriedCivilBefore=marriedBefore
-thailandAffirmationStatusMarriedCivilMaritalStatus=currentStatus
+thailandAffirmationStatusMarriedCivilMaritalStatus=#{get('currentStatus')?:'Single'}
 thailandAffirmationMainOccupation=occupation
 thailandAffirmationPlaceOfBirth=placeOfBirth
 thailandAffirmationPartnersName=partnerName
