Mother and fathers name 'Not known', split spain partner name correctly.

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -7,9 +7,9 @@ thailandAffirmationPlaceOfBirth=placeOfBirth
 thailandAffirmationPartnersName=partnerName
 thailandAffirmationPartnersNationality=partnersNationality
 thailandAffirmationPartnersPassportNo=partnersPassportNumber
-thailandAffirmationFathersName=fathersName
-thailandAffirmationMothersName=mothersName
-thailandAffirmationMothersMaidenName=mothersMaidenName
+thailandAffirmationFathersName=#{get('fathersName')?:'Not known'}
+thailandAffirmationMothersName=#{get('mothersName')?:'Not known'}
+thailandAffirmationMothersMaidenName=#{get('mothersMaidenName')?:'Not known'}
 thailandAffirmationReferee1Name=referee1FullName
 thailandAffirmationReferee1Address=referee1AddressLine1,referee1AddressLine2
 thailandAffirmationReferee1Town=referee1TownOrCity
@@ -37,8 +37,8 @@ spainCniEligibilityLive=whereDoYouLive
 spainCniEligibilityPartnerSpanishNational=partnerSpanish
 spainCniEligibilityPartnerSpanishResident=partnerResidentInSpain
 spainCniEligibilityNoImpediment=spanishCNI
-spainCniPartnersDetailsFirstName=#{(get('partnersFullName')?:' ').split(' ')[0]}
-spainCniPartnersDetailsLastName=#{(get('partnersFullName')?:' ').split(' ')[1]}
+spainCniPartnersDetailsFirstName=#{(get('partnersfullname')?:'').split(' ').length > 0 ? (get('partnersfullname')?:'').split(' ')[0] : null}
+spainCniPartnersDetailsLastName=#{(get('partnersfullname')?:'').indexOf(' ') > 0 ? get('partnersfullname').substring(get('partnersfullname').indexOf(' ') + 1) : null}
 spainCniPartnersDetailsNationality=partnersNationality
 spainCniPartnersDetailsAddress=partnersAddressLine1
 spainCniPartnersDetailsAddressLine2=partnersAddressLine2
