Send 'Not known' if partner's full name hasn't been provided :/

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -37,8 +37,8 @@ spainCniEligibilityLive=whereDoYouLive
 spainCniEligibilityPartnerSpanishNational=partnerSpanish
 spainCniEligibilityPartnerSpanishResident=partnerResidentInSpain
 spainCniEligibilityNoImpediment=spanishCNI
-spainCniPartnersDetailsFirstName=#{(get('partnersfullname')?:'').split(' ').length > 0 ? (get('partnersfullname')?:'').split(' ')[0] : null}
-spainCniPartnersDetailsLastName=#{(get('partnersfullname')?:'').indexOf(' ') > 0 ? get('partnersfullname').substring(get('partnersfullname').indexOf(' ') + 1) : null}
+spainCniPartnersDetailsFirstName=#{(get('partnersfullname')?:'').split(' ').length > 0 ? (get('partnersfullname')?:'').split(' ')[0] : 'Not known'}
+spainCniPartnersDetailsLastName=#{(get('partnersfullname')?:'').indexOf(' ') > 0 ? get('partnersfullname').substring(get('partnersfullname').indexOf(' ') + 1) : 'Not known'}
 spainCniPartnersDetailsNationality=partnersNationality
 spainCniPartnersDetailsAddress=partnersAddressLine1
 spainCniPartnersDetailsAddressLine2=partnersAddressLine2
