--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -72,10 +72,10 @@ spainMscPartnersDetailsAppointmentDate=dateOfAppointment
 spainMscPartnersDetailsPlaceOfCeremony=placeOfMarriage
 spainMscPartnersDetailsDateOfCeremony=dateOfMarriage
 spainMscYourDetailsPlaceOfBirth=placeOfBirth
-spainMscYourDetailsFathersFirstName=
-spainMscYourDetailsFathersLastName=
-spainMscYourDetailsMothersFirstName=
-spainMscYourDetailsMothersLastName=
+spainMscYourDetailsFathersFirstName=#{(get('fathersName')?:'').split(' ').length > 0 ? (get('fathersName')?:'').split(' ')[0] : 'Not known'}
+spainMscYourDetailsFathersLastName=#{(get('fathersName')?:'').indexOf(' ') > 0 ? get('fathersName').substring(get('fathersName').indexOf(' ') + 1) : 'Not known'}
+spainMscYourDetailsMothersFirstName=#{(get('mothersName')?:'').split(' ').length > 0 ? (get('mothersName')?:'').split(' ')[0] : 'Not known'}
+spainMscYourDetailsMothersLastName=#{(get('mothersName')?:'').indexOf(' ') > 0 ? get('mothersName').substring(get('mothersName').indexOf(' ') + 1) : 'Not known'}
 spainMscYourDetailsDeliveryAddressAddress=recipientAddressLine1
 spainMscYourDetailsDeliveryAddressAddressLine2=recipientAddressLine2
 spainMscYourDetailsDeliveryAddressTown=recipientTownOrCity
