Be consistent with case sensitivity

--- a/worker/src/main/resources/mappings/fields.properties
+++ b/worker/src/main/resources/mappings/fields.properties
@@ -1,85 +1,85 @@
-thailandAffirmationWhatYoullNeedUkPassport=ukPassport
-thailandAffirmationWhatYoullNeedOppositeSex=partnerOfOppositeSex
-thailandAffirmationStatusMarriedCivilBefore=marriedBefore
-thailandAffirmationStatusMarriedCivilMaritalStatus=#{get('currentStatus')?:'Single'}
+thailandAffirmationWhatYoullNeedUkPassport=ukpassport
+thailandAffirmationWhatYoullNeedOppositeSex=partnerofoppositesex
+thailandAffirmationStatusMarriedCivilBefore=marriedbefore
+thailandAffirmationStatusMarriedCivilMaritalStatus=#{get('currentstatus')?:'Single'}
 thailandAffirmationMainOccupation=occupation
-thailandAffirmationPlaceOfBirth=placeOfBirth
-thailandAffirmationPartnersName=partnerName
-thailandAffirmationPartnersNationality=partnersNationality
-thailandAffirmationPartnersPassportNo=partnersPassportNumber
-thailandAffirmationFathersName=#{get('fathersName')?:'Not known'}
-thailandAffirmationMothersName=#{get('mothersName')?:'Not known'}
-thailandAffirmationMothersMaidenName=#{get('mothersMaidenName')?:'Not known'}
-thailandAffirmationReferee1Name=referee1FullName
-thailandAffirmationReferee1Address=referee1AddressLine1,referee1AddressLine2
-thailandAffirmationReferee1Town=referee1TownOrCity
-thailandAffirmationReferee1Postcode=referee1Postcode
-thailandAffirmationReferee1Country=referee1Country
-thailandAffirmationReferee2Name=referee2FullName
-thailandAffirmationReferee2Address=referee2AddressLine1,referee2AddressLine2
-thailandAffirmationReferee2Town=referee2TownOrCity
-thailandAffirmationReferee2Postcode=referee2Postcode
-thailandAffirmationReferee2Country=referee2Country
-thailandAffirmationRegistrationDate=marriageDate
-thailandAffirmationRegistrationProvince=marriageProvince
+thailandAffirmationPlaceOfBirth=placeofbirth
+thailandAffirmationPartnersName=partnername
+thailandAffirmationPartnersNationality=partnersnationality
+thailandAffirmationPartnersPassportNo=partnerspassportnumber
+thailandAffirmationFathersName=#{get('fathersname')?:'Not known'}
+thailandAffirmationMothersName=#{get('mothersname')?:'Not known'}
+thailandAffirmationMothersMaidenName=#{get('mothersmaidenname')?:'Not known'}
+thailandAffirmationReferee1Name=referee1fullname
+thailandAffirmationReferee1Address=referee1addressline1,referee1addressline2
+thailandAffirmationReferee1Town=referee1townorcity
+thailandAffirmationReferee1Postcode=referee1postcode
+thailandAffirmationReferee1Country=referee1country
+thailandAffirmationReferee2Name=referee2fullname
+thailandAffirmationReferee2Address=referee2addressline1,referee2addressline2
+thailandAffirmationReferee2Town=referee2townorcity
+thailandAffirmationReferee2Postcode=referee2postcode
+thailandAffirmationReferee2Country=referee2country
+thailandAffirmationRegistrationDate=marriagedate
+thailandAffirmationRegistrationProvince=marriageprovince
 notarialDeclaration=declaration
-notarialConsentMethodOfContact=#{get('contactPreference')?:'Not set'}
-franceMarriageFullNameAtBirth=firstName,middleName,surname
-franceMarriageTownOfBirth=placeOfBirth
-franceMarriageCountryOfBirth=countryOfBirth
-franceMarriageMaritalStatus=#{get('maritalStatusNow')?:'Single'}
-francePacsFullNameAtBirth=firstName,middleName,surname
-francePacsTownOfBirth=placeOfBirth
-francePacsCountryOfBirth=countryOfBirth
-francePacsMaritalStatus=#{get('maritalStatusNow')?:'Single'}
+notarialConsentMethodOfContact=#{get('contactpreference')?:'Not set'}
+franceMarriageFullNameAtBirth=firstname,middlename,surname
+franceMarriageTownOfBirth=placeofbirth
+franceMarriageCountryOfBirth=countryofbirth
+franceMarriageMaritalStatus=#{get('maritalstatusnow')?:'Single'}
+francePacsFullNameAtBirth=firstname,middlename,surname
+francePacsTownOfBirth=placeofbirth
+francePacsCountryOfBirth=countryofbirth
+francePacsMaritalStatus=#{get('maritalstatusnow')?:'Single'}
 
-spainCniEligibilityLive=whereDoYouLive
-spainCniEligibilityPartnerSpanishNational=partnerSpanish
-spainCniEligibilityPartnerSpanishResident=partnerResidentInSpain
-spainCniEligibilityNoImpediment=spanishCNI
+spainCniEligibilityLive=wheredoyoulive
+spainCniEligibilityPartnerSpanishNational=partnerspanish
+spainCniEligibilityPartnerSpanishResident=partnerresidentinspain
+spainCniEligibilityNoImpediment=spanishcni
 spainCniPartnersDetailsFirstName=#{(get('partnersfullname')?:'').split(' ').length > 0 ? (get('partnersfullname')?:'').split(' ')[0] : 'Not known'}
 spainCniPartnersDetailsLastName=#{(get('partnersfullname')?:'').indexOf(' ') > 0 ? get('partnersfullname').substring(get('partnersfullname').indexOf(' ') + 1) : 'Not known'}
-spainCniPartnersDetailsNationality=partnersNationality
-spainCniPartnersDetailsAddress=partnersAddressLine1
-spainCniPartnersDetailsAddressLine2=partnersAddressLine2
-spainCniPartnersDetailsAddressTown=partnersTown
-spainCniPartnersDetailsAddressPostcode=partnersPostcode
-spainCniPartnersDetailsMaritalStatus=#{get('partnersCurrentMaritalStatus')?:'Single'}
-spainCniPartnersDetailsSex=partnersSex
-spainCniPartnersDetailsSpanishAuthority=nameOfSpanishAuthority
-spainCniPartnersDetailsCivilPartnershipBefore=partnerHasBeenMarriedBefore
-spainCniPartnersDetailsDateOfAppointment=dateOfAppointment
-spainCniPartnersDetailsPlaceOfCeremony=placeOfMarriage
-spainCniPartnersDetailsDateOfCeremony=dateOfMarriage
-spainCniYourDetailsMaritalStatus=#{get('maritalStatusNow')?:'Single'}
-spainCniYourDetailsDeliveryAddressAddress=recipientAddressLine1
-spainCniYourDetailsDeliveryAddressAddressLine2=recipientAddressLine2
-spainCniYourDetailsDeliveryAddressTown=recipientTownOrCity
-spainCniYourDetailsDeliveryAddressPostcode=recipientPostcode
+spainCniPartnersDetailsNationality=partnersnationality
+spainCniPartnersDetailsAddress=partnersaddressline1
+spainCniPartnersDetailsAddressLine2=partnersaddressline2
+spainCniPartnersDetailsAddressTown=partnerstown
+spainCniPartnersDetailsAddressPostcode=partnerspostcode
+spainCniPartnersDetailsMaritalStatus=#{get('partnerscurrentmaritalstatus')?:'Single'}
+spainCniPartnersDetailsSex=partnerssex
+spainCniPartnersDetailsSpanishAuthority=nameofspanishauthority
+spainCniPartnersDetailsCivilPartnershipBefore=partnerhasbeenmarriedbefore
+spainCniPartnersDetailsDateOfAppointment=dateofappointment
+spainCniPartnersDetailsPlaceOfCeremony=placeofmarriage
+spainCniPartnersDetailsDateOfCeremony=dateofmarriage
+spainCniYourDetailsMaritalStatus=#{get('maritalstatusnow')?:'Single'}
+spainCniYourDetailsDeliveryAddressAddress=recipientaddressline1
+spainCniYourDetailsDeliveryAddressAddressLine2=recipientaddressline2
+spainCniYourDetailsDeliveryAddressTown=recipienttownorcity
+spainCniYourDetailsDeliveryAddressPostcode=recipientpostcode
 
-spainMscEligibilityLive=whereDoYouLive
-spainMscEligibilityPartnerSpanishNational=partnerSpanish
-spainMscEligibilityPartnerSpanishResident=partnerResidentInSpain
-spainMscEligibilityNoImpediment=spanishCNI
-spainMscEligibilityCertificate=needMSC
-spainMscStatusMaritalStatus=#{get('maritalStatusNow')?:'Single'}
-spainMscPartnersDetailsCivilPartnership=partnerHasBeenMarriedBefore
-spainMscPartnersDetailsMaritalStatus=#{get('partnersCurrentMaritalStatus')?:'Single'}
-spainMscPartnersDetailsSex=partnersSex
-spainMscPartnersDetailsNationality=partnersNationality
-spainMscPartnersDetailsSpanishAuthority=nameOfSpanishAuthority
-spainMscPartnersDetailsAppointmentDate=dateOfAppointment
-spainMscPartnersDetailsPlaceOfCeremony=placeOfMarriage
-spainMscPartnersDetailsDateOfCeremony=dateOfMarriage
-spainMscYourDetailsPlaceOfBirth=placeOfBirth
+spainMscEligibilityLive=wheredoyoulive
+spainMscEligibilityPartnerSpanishNational=partnerspanish
+spainMscEligibilityPartnerSpanishResident=partnerresidentinspain
+spainMscEligibilityNoImpediment=spanishcni
+spainMscEligibilityCertificate=needmsc
+spainMscStatusMaritalStatus=#{get('maritalstatusnow')?:'Single'}
+spainMscPartnersDetailsCivilPartnership=partnerhasbeenmarriedbefore
+spainMscPartnersDetailsMaritalStatus=#{get('partnerscurrentmaritalstatus')?:'Single'}
+spainMscPartnersDetailsSex=partnerssex
+spainMscPartnersDetailsNationality=partnersnationality
+spainMscPartnersDetailsSpanishAuthority=nameofspanishauthority
+spainMscPartnersDetailsAppointmentDate=dateofappointment
+spainMscPartnersDetailsPlaceOfCeremony=placeofmarriage
+spainMscPartnersDetailsDateOfCeremony=dateofmarriage
+spainMscYourDetailsPlaceOfBirth=placeofbirth
 spainMscYourDetailsFathersFirstName=#{(get('fathersname')?:'').split(' ').length > 0 ? (get('fathersname')?:'').split(' ')[0] : 'Not known'}
 spainMscYourDetailsFathersLastName=#{(get('fathersname')?:'').indexOf(' ') > 0 ? get('fathersname').substring(get('fathersname').indexOf(' ') + 1) : 'Not known'}
 spainMscYourDetailsMothersFirstName=#{(get('mothersname')?:'').split(' ').length > 0 ? (get('mothersname')?:'').split(' ')[0] : 'Not known'}
 spainMscYourDetailsMothersLastName=#{(get('mothersname')?:'').indexOf(' ') > 0 ? get('mothersname').substring(get('mothersname').indexOf(' ') + 1) : 'Not known'}
-spainMscYourDetailsDeliveryAddressAddress=recipientAddressLine1
-spainMscYourDetailsDeliveryAddressAddressLine2=recipientAddressLine2
-spainMscYourDetailsDeliveryAddressTown=recipientTownOrCity
-spainMscYourDetailsDeliveryAddressPostcode=recipientPostcode
+spainMscYourDetailsDeliveryAddressAddress=recipientaddressline1
+spainMscYourDetailsDeliveryAddressAddressLine2=recipientaddressline2
+spainMscYourDetailsDeliveryAddressTown=recipienttownorcity
+spainMscYourDetailsDeliveryAddressPostcode=recipientpostcode
 
 #spainPdhEligibilityUkPassport=
 #spainPdhEligibilityCertificate=
