--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,11 +144,12 @@ jobs:
           namespace: fco-forms-test
           container-image-updates: casemanagement-worker=523508197323.dkr.ecr.eu-west-2.amazonaws.com/fco/casemanagement-worker:${WORKER_TAG}
           resource-name: deployment/casemanagement-worker
+          show-kubectl-command: true
 
-      - kubernetes/update-container-image:
-          namespace: fco-forms-test
-          container-image-updates: casemanagement-api=523508197323.dkr.ecr.eu-west-2.amazonaws.com/fco/casemanagement-api:${API_TAG}
-          resource-name: deployment/casemanagement-api
+#      - kubernetes/update-container-image:
+#          namespace: fco-forms-test
+#          container-image-updates: casemanagement-api=523508197323.dkr.ecr.eu-west-2.amazonaws.com/fco/casemanagement-api:${API_TAG}
+#          resource-name: deployment/casemanagement-api
 
 workflows:
   "Test, publish and deploy":
