--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,7 +133,9 @@ jobs:
           name: Export tags
           command: |
             export WORKER_TAG=`cat worker/tag.txt`
+            echo ${WORKER_TAG}
             export API_TAG=`cat api/tag.txt`
+            echo ${API_TAG}
 
       - aws-eks/update-kubeconfig-with-authenticator:
           cluster-name: fco-forms-test
@@ -142,7 +144,7 @@ jobs:
 
       - kubernetes/update-container-image:
           namespace: fco-forms-test
-          container-image-updates: casemanagement-worker=523508197323.dkr.ecr.eu-west-2.amazonaws.com/fco/casemanagement-worker:${WORKER_TAG}
+          container-image-updates: casemanagement-worker=523508197323.dkr.ecr.eu-west-2.amazonaws.com/fco/casemanagement-worker:${`cat worker/tag.txt`}
           resource-name: deployment/casemanagement-worker
           show-kubectl-command: true
 
