--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,14 +129,6 @@ jobs:
       - attach_workspace:
           at: .
 
-      - run:
-          name: Export tags
-          command: |
-            export WORKER_TAG=`cat worker/tag.txt`
-            echo ${WORKER_TAG}
-            export API_TAG=`cat api/tag.txt`
-            echo ${API_TAG}
-
       - aws-eks/update-kubeconfig-with-authenticator:
           cluster-name: fco-forms-test
           aws-region: eu-west-2
@@ -144,14 +136,14 @@ jobs:
 
       - kubernetes/update-container-image:
           namespace: fco-forms-test
-          container-image-updates: casemanagement-worker=523508197323.dkr.ecr.eu-west-2.amazonaws.com/fco/casemanagement-worker:${`cat worker/tag.txt`}
+          container-image-updates: casemanagement-worker=523508197323.dkr.ecr.eu-west-2.amazonaws.com/fco/casemanagement-worker:`cat worker/tag.txt`
           resource-name: deployment/casemanagement-worker
           show-kubectl-command: true
 
-#      - kubernetes/update-container-image:
-#          namespace: fco-forms-test
-#          container-image-updates: casemanagement-api=523508197323.dkr.ecr.eu-west-2.amazonaws.com/fco/casemanagement-api:${API_TAG}
-#          resource-name: deployment/casemanagement-api
+      - kubernetes/update-container-image:
+          namespace: fco-forms-test
+          container-image-updates: casemanagement-api=523508197323.dkr.ecr.eu-west-2.amazonaws.com/fco/casemanagement-api:`cat api/tag.txt`
+          resource-name: deployment/casemanagement-api
 
 workflows:
   "Test, publish and deploy":
